--- a/frontend/src/Components/TextBox/textbox.css
+++ b/frontend/src/Components/TextBox/textbox.css
@@ -2,17 +2,22 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
 
 }
 
 .textbox-container_input{
     width: 100%;
-    border: 3px solid #686DAD;
+    border: 2px solid #686DAD;
     border-radius: 10px;
     padding: 10px;
     font-size: 16px;
     outline: none;
     height: 100%;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
+    height: 30px;
    
 }
 
